[tool.poetry]
name = "dvc-poetry2nix-bug"
version = "0.1.0"
description = ""
authors = ["Eric Hulburd <ehulburd@rigetti.com>"]
readme = "README.md"
packages = [{include = "dvc_poetry2nix_bug"}]

[tool.poetry.dependencies]
python = "^3.10"
dvc = {version = "2.18.1", extras = ["s3", "ssh"]}
pathspec = "0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
